# GeneticCliqueFinder

./: .gitignore  CMakeLists.txt
Headers/: CliqueFinder.h  Common.cuh  DeviceGraph.cuh  Entry.h  Graph.h  Organism.h  Vertex.h
SourceFiles/: CliqueFinder.cpp  Common.cu  DeviceGraph.cu  Graph.cpp  Organism.cpp  Vertex.cpp  main.cpp  main.cu
Test/: test.edges  test.feat  test.featnames
